<resources>
    <string name="app_name">mx测试</string>
    <string name="find_menu_store">餐饮</string>
    <string name="find_life_store">生活</string>
    <string name="my">我的</string>
    <string name="user_center">个人中心</string>
    <string name="more_feedback">反馈</string>
    <string name="more_introduce">最新功能</string>
    <string name="more_about">关于</string>
    <string name="more_update">更新</string>
    <string name="my_menu_order">我的订单 </string>
    <string name="order_detail">订单详情 </string>
    <string name="my_booking_order">我的预订</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_scan">最近浏览</string>
    <string name="my_msg">我的消息</string>
    <string name="my_site">常用地址</string>
    <string name="qr_store">QR商家 </string>
    <string name="hot_store">热门餐饮</string>
    <string name="nearby_store">附近</string>
    <string name="find_store">查找商家</string>
    <string name="search_store">搜索</string>
    <string name="search_clear">重置</string>
    <string name="store_category">类别</string>
    <string name="service_menu">餐饮服务</string>
    <string name="service_booking">预订服务</string>
    <string name="qr_tips">扫一扫，齐分享！</string>
    <string name="qr_error">该二维码格式不支持，请再扫描！</string>
    <string name="back">返回</string>
    <string name="order">下单</string>
    <string name="torch_on">打开闪光灯</string>
    <string name="torch_off">关闭闪光灯</string>
    <string name="qr_msg_main">提示:请将（商家，餐桌，商品）二维码置于窗口中间。</string>
    <string name="qr_msg_cart">提示:请将（餐桌，商品）二维码置于窗口中间。</string>
    <string name="qr_msg_table">提示:请将（餐桌）二维码置于窗口中间。</string>
    <string name="qr_msg_menu_item">提示:请将（商品）二维码置于窗口中间。</string>
    <string name="favorite">收藏</string>
    <string name="is_favorite">已收藏</string>
    <string name="not_favorite">未收藏</string>
    <string name="district">地区</string>
    <string name="cart">购物篮</string>
    <string name="cart_clear">清空</string>
    <string name="cart_count">总量</string>
    <string name="cart_amount">总额</string>
    <string name="table_num">餐桌</string>
    <string name="book_seat">订位</string>
    <string name="book_menu">预订</string>
    <string name="ican">我能</string>
    <string name="city_location">GPS定位城市</string>
    <string name="city_location_doing">定位中。。。</string>
    <string name="switch_city">城市切换</string>
    <string name="city_select">城市选择</string>
    <string name="city_hot">热门城市</string>
    <string name="province_list">省份列表</string>
    <string name="inside_order">堂食</string>
    <string name="inside_order2">下单</string>
    <string name="outside_order">外卖</string>
    <string name="booking_order">订位</string>
    <string name="scan_order">扫描</string>
    <string name="submit">提交</string>
    <string name="mobile">联系手机</string>
    <string name="submit_prompt">提交说明:</string>
    <string name="mobile_hint">请输入手机号码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="login_sms_code">短信校验码</string>
    <string name="login_sms_code_hint">请输入验证码</string>
    <string name="sms_code">较验码：</string>
    <string name="token_code">动态码：</string>
    <string name="contact_person">联系姓名</string>
    <string name="short_name">称呼  </string>
    <string name="re_password_hint">请重复输入密码</string>
    <string name="short_name_hint">例如：陈小姐,周先生</string>
    <string name="password">密码：</string>
    <string name="re_password">密码确认：</string>
    <string name="new_password">新密码：</string>
    <string name="select">选择</string>
    <string name="get_sms_code">获取</string>
    <string name="takeout_address">地址</string>
    <string name="booking_status_normal">可订</string>
    <string name="booking_status_sold">已满</string>
    <string name="booking_status_stop">暂停</string>
    <string name="booking_type_table">店内就餐</string>
    <string name="booking_type_takeout">外买</string>
    <string name="booking_dinner_type">就餐类型:</string>
    <string name="booking_dinner_date">就餐日期:</string>
    <string name="booking_dinner_time">就餐时间:</string>
    <string name="booking_time">预订时间</string>
    <string name="booking_person_num">预订人数</string>
    <string name="booking_date">预订日期:</string>
    <string name="booking_item">预订项目</string>
    <string name="booking_store">商铺:</string>
    <string name="booking_select_seat_item">填写信息</string>
    <string name="booking_submit">预订提交</string>
    <string name="other_store">其它分店</string>
    <string name="store_address">地址</string>
    <string name="store_phone">电话</string>
    <string name="store_all_store">分店</string>
    <string name="store_web_url">网站</string>
    <string name="store_description">描述</string>
    <string name="about_title">今天你订了么？</string>
    <string name="about_content">　　订么网致力于为大众提供餐饮、娱乐、生活服务等消费的各种形式的\"订\"服务，让您轻松享受高品质的\"订\"生活。</string>
    <string name="download_app">下载App,请扫描二维码.</string>
    <string name="menu_search_hint">请输入商品编号，名称，拼音首字母助记</string>
    <string name="situo_no_result">木有东西...</string>
    <string name="situo_gofor_menu">快去体验一下订餐乐趣吧...</string>
    <string name="situo_success">成功</string>
    <string name="situo_failed">失败</string>
    <string name="situo_name_label">名字:</string>
    <string name="situo_ok">确定</string>
    <string name="situo_cancel">取消</string>
    <string name="situo_update_app">更新程序</string>
    <string name="situo_app_newest">当前的程序是最新的版本</string>
    <string name="situo_email_label">Email:</string>
    <string name="situo_content_label">内容:</string>
    <string name="situo_submit">提交</string>
    <string name="situo_feed_back">反馈</string>
    <string name="situo_myfeed_back">我的反馈</string>
    <string name="situo_feedback_return">您的反馈收到了回复</string>
    <string name="situo_loading">加载中...</string>
    <string name="situo_pull_to_refresh_pull_label">下拉刷新</string>
    <string name="situo_pull_to_refresh_release_label">松开后刷新</string>
    <string name="situo_pull_to_refresh_refreshing_label">刷新...</string>
    <string name="situo_pull_to_refresh_tap_label">刷新</string>
    <string name="situo_pull_to_refresh_finish_label">刷新完成</string>
    <string name="situo_currentposition">当前位置:</string>
    <string name="situo_no_search_results">结束为空</string>
    <string name="situo_password_hint">请输入密码</string>
    <string name="situo_user_hint">请输入用户</string>
    <string name="situo_user_null">用户为空</string>
    <string name="situo_password_null">密码为空</string>
    <string name="situo_qr_msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="situo_qr_contents_contact">联系人信息</string>
    <string name="situo_qr_contents_email">Email地址</string>
    <string name="situo_qr_contents_location">地理坐标</string>
    <string name="situo_qr_contents_phone">电话号码</string>
    <string name="situo_qr_contents_sms">短信地址</string>
    <string name="situo_qr_contents_text">纯文本</string>
    <string name="situo_qr_menu_share">分享</string>
    <string name="situo_qr_msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="situo_qr_button_ok">确定</string>
    <string name="situo_qr_preferences_actions_title">找到条码时</string>
    <string name="situo_qr_preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="situo_qr_preferences_bulk_mode_title">批量扫描模式</string>
    <string name="situo_qr_preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="situo_qr_preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="situo_qr_preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="situo_qr_preferences_decode_1D_title">扫描 一维条码</string>
    <string name="situo_qr_preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="situo_qr_preferences_decode_QR_title">扫描 QR码</string>
    <string name="situo_qr_preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="situo_qr_preferences_front_light_title">前灯</string>
    <string name="situo_qr_preferences_general_title">一般设置</string>
    <string name="situo_qr_preferences_name">设置</string>
    <string name="situo_qr_preferences_play_beep_title">提示音</string>
    <string name="situo_qr_preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="situo_qr_preferences_remember_duplicates_title">记住重复</string>
    <string name="situo_qr_preferences_result_title">结果设置</string>
    <string name="situo_qr_preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="situo_qr_preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="situo_qr_preferences_scanning_title">条码类型选择</string>
    <string name="situo_qr_preferences_search_country">搜索国家</string>
    <string name="situo_qr_preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="situo_qr_preferences_supplemental_title">检索更多信息</string>
    <string name="situo_qr_preferences_vibrate_title">振动</string>
    <string name="situo_hint_search">请输入商户关键字</string>
    <string name="situo_favorite">收藏</string>
    <string name="index">首页</string>
    <string name="trans_query">交易查询</string>
    <string name="remain_query">余额查询</string>
    <string name="more">更多</string>
    <string name="login">登录</string>
    <string name="login_tip">请登录</string>
    <string name="login_tip_msg"> 您还没有登录.注册登录后,才可以下单!</string>
    <string name="logout_tip_msg">是否退出当前账号?</string>
    <string name="userinfo">个人信息</string>
    <string name="change_user">更换用户</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="about">关于</string>
    <string name="feekback">我要反馈</string>
    <string name="help">帮助</string>
    <string name="newguide">新功能介绍</string>
    <string name="time">时间</string>
    <string name="amount">金额</string>
    <string name="refresh">刷新</string>
    <string name="listdemo">列表演示</string>
    <string name="del">编辑</string>
    <string name="complete">完成</string>
    <string name="tuan">团购</string>
    <string name="activity">活动</string>
    <string name="description">简介</string>
    <string name="title_modify_user">资料变更</string>
    <string name="forget_pwd_tip">忘记密码?</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="change_info_hint">请输入你的称呼,如:周先生</string>
    <string name="store_name">商家</string>
    <string name="order_memo">订单备注</string>
    <string name="add_cart">+购物车</string>
    <string name="hot_dinner_store">热门餐饮商户</string>
    <string name="nearby_dinner_store">附近餐饮商户</string>
    <string name="more_share">解读分享</string>
    <string name="share_setting">分享设置</string>
    <string name="my_group">我的卡券</string>
    <string name="more_dispayimage_yes">图片显示：是</string>
    <string name="more_dispayimage_no">图片显示：否</string>
    <string name="more_dispayimage">图片显示</string>
    <string name="more_share_tip">请将接收到的分享信息粘贴到下方解读</string>
    <string name="more_share_model">格式:xxx[订么网http://m.dingmore.com?###]</string>
    <string name="more_share_btn">解读</string>
    <string name="register_fail">注册失败</string>
    <string name="findpwd_fail">找回密码失败</string>
    <string name="login_fail">登陆失败</string>
    <string name="modifyuser_fail">登陆失败</string>
    <string name="msgnotify_title">用户自定义打开的Activity</string>
    <string name="msgnotify_yourorder">您的订单:</string>
    <string name="msgnotify_store">店:</string>
    <string name="msgnotify_loadorder">请先登录，再查看订单。</string>
    <string name="commonui_stopsell">今天停售</string>
    <string name="commonui_sellout">今天售完</string>
    <string name="commonui_sendmsg_fail">验证码发送失败</string>
    <string name="commonui_sendmsg_inputright">请输入正确的手机号码</string>
    <string name="commonui_copy_msg">将以下信息复制并分享给朋友。接收方,订么app->更多->解读分享\n\n</string>
    <string name="commonui_copy_title">分享信息</string>
    <string name="commonui_copy_btn_copy">复制</string>
    <string name="commonui_copy_msg_copy">分享已复制到粘贴板</string>
    <string name="status_stop">暂停状态，不能选择</string>
    <string name="status_sold">订满状态，不能选择</string>
    <string name="submit_order_fail">下订单失败</string>
    <string name="submit_order_succ">下订单成功！</string>
    <string name="is_clear_cart">是否清空购物篮?</string>
	<string name="change_postion">请选择</string>
</resources>