<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools" 
       android:layout_width="280dip"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@drawable/dialog_border"
       android:paddingTop="5dip"
       android:paddingBottom="5dip"
       android:paddingLeft="0dip"
       android:paddingRight="0dip"
       android:layout_gravity="center_horizontal|top"
       >
	<TextView
    	android:layout_width="wrap_content"
       	android:layout_height="30dip"
       	android:orientation="horizontal"
       	android:gravity="center"
       	android:text="@string/change_postion"
       	android:textColor="@color/font_normal_green"
       	android:id="@+id/tv_title"
       	android:textSize="17sp"
       	android:paddingLeft="10dip"
       	>
       	</TextView>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="@color/line_color"
    android:orientation="vertical" >
	</LinearLayout>
	<LinearLayout
    	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal"
       	android:gravity="center"
       	android:background="@null"
       	android:padding="5dip"
       	android:layout_marginTop="5dip"
       	>
       <TextView
    	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal"
       	android:gravity="center_vertical|left"
       	android:textColor="@color/grey_end"
       	android:id="@+id/tv_msg"
       	android:padding="2dip"
       	android:textSize="15sp"
       	>
       	</TextView>
       	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
        android:layout_height="47dip"
        android:gravity="center"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        >

        <Button 
           android:id="@+id/btn_close"
           android:layout_width="100dip"
           android:layout_height="40dip"
           android:text="@string/situo_cancel"
           android:background="@drawable/btn_popcancel_selector"
           android:textColor="@color/white"
           android:gravity="center"
           android:textSize="17sp"
           />
        
         <Button 
           android:id="@+id/btn_sure"
           android:layout_width="100dip"
           android:layout_height="40dip"
           android:text="@string/situo_ok"
           android:background="@drawable/btn_popsure_selector"
           android:textColor="@color/white"
           android:gravity="center"
           android:layout_marginLeft="5dip"
           android:textSize="17sp"
           />
	</LinearLayout>
	
 </LinearLayout>
